<resources>
    <string name="app_name">Salita</string>
    <string name="ime_name">Sign Language Keyboard</string>
    <string name="title_desc">Filipino Sign Language Translator</string>
    <string name="header_1">Filipino Sign Language Application Translator</string>
    <string name="header_2">Empowering Silence, Bridging Worlds:</string>
    <string name="header_3">Bridging voices to Life:</string>
    <string name="desc_1">Taglay ang Diwa ng Komunikasyon</string>
    <string name="desc_2">Resolve communication barrier</string>
    <string name="desc_3">Your Sign, Our Language.</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_msg">This application enables deaf and mute individuals to facilitate communication and bridge the gap between them and those who are not familiar with.
    It offers a converter where to beneficiaries can interact using a sign language generator that converts into text and vice versa.
    </string>
    <string name="con">Continue</string>
    <string name="good_day">Good Day!</string>
    <string name="welcome_to_our_community">Welcome to our community.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learn_more_about_fsl">Learn more about FSL</string>
    <string name="fsl_desc">With the passage of the Filipino Sign Language Act in 2018, Filipino Sign Language (FSL) gained official recognition as the national sign language of the Philippines. With variations at the national, local (community), and domestic (home) levels, it is described as an understudied deaf community sign language in Southeast Asia.</string>
    <string name="fsl_1">Overview about FSL</string>
    <string name="fsl_2">The Filipino Sign Language Act</string>
    <string name="fsl_3">Overview about FSL Keyboard</string>
    <string name="fsl_4">Overview about FSL Gestures</string>
    <string name="translator">Translator</string>
    <string name="prepared_to_use">Prefer to use</string>
    <string name="text_keyboard">Text Keyboard</string>
    <string name="sign_language">Sign Language</string>
    <string name="type_your_text_here">Type your text here…</string>
    <string name="generate">Generate</string>
    <string name="result">Result</string>
    <string name="clear">Clear</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="exit">Exit</string>
    <string name="choose_language" translatable="false">Choose language</string>
    <string name="english" translatable="false">English</string>
    <string name="about_us" translatable="false">About Us</string>
    <string name="tagalog" translatable="false">Tagalog</string>
    <string name="assessment" translatable="false">Assessment</string>
    <string name="easy" translatable="false">Easy</string>
    <string name="moderate" translatable="false">Moderate</string>
    <string name="hard" translatable="false">Hard</string>
    <string name="fsl_overview_title">Liberty Notarte-Balanquit presents Filipino Sign Language research</string>
    <string name="fsl_overview_desc">According to projections made by the Philippine Statistics Authority there are 1,784,690 people who have hearing impairments in 2020. They are a part of various communities across the nation and are primarily children of hearing families who teach them how to use home signs. Through formal FSL instruction in elementary school, deaf children can communicate with hearing people as well as with other deaf people. It is not surprising that negative attitudes toward deafness are so common. Children who are deaf are frequently forced to adapt to a hearing environment (Balanquit, 2023).</string>
    <string name="republic_act_no_11106" translatable="false">Republic Act No. 11106</string>
    <string name="ra_desc_1">AN ACT DECLARING THE FILIPINO SIGN LANGUAGE AS THE NATIONAL SIGN LANGUAGE OF THE FILIPINO DEAF AND THE OFFICIAL SIGN LANGUAGE OF GOVERNMENT IN ALL TRANSACTIONS INVOLVING THE DEAF, AND MANDATING ITS USE IN SCHOOLS, BROADCAST MEDIA, AND WORKPLACES</string>
    <string name="ra_desc_2">Be it enacted by the Senate and House of Representatives of the Philippines in Congress assembled:</string>
    <string name="section_1_title">Section 1. Title - This Act shall be known as “The Filipino Sign Language Act”.</string>
    <string name="section_2">Section 2. Declaration of Policy - The State shall, in compliance with the United Nations Convention on the Rights of Persons with Disabilities, promote, protect, and ensure the full and equal enjoyment of all human rights and fundamental freedoms of persons with disabilities. Thus, national and local State agencies shall uphold respect for their inherent dignity, individual autonomy, and independence by guaranteeing accessibility and eliminating all forms of discrimination in all public interactions and transactions, thereby ensuring their full and effective participation and inclusion in society. The State shall also take all appropriate measures to ensure that the Filipino deaf can exercise the right to expression and opinion. Accordingly, the State recognizes and promotes the use of sign languages embodying the specific cultural and linguistic identity of the Filipino deaf.
    \n\nThe State also furthers the vision taken with the Early Years Act (Republic Act No. 10410) and the Enhanced Basic Education Act (Republic Act No. 10533), which have already recognized Filipino Sign Language in the education of the deaf learners from early childhood up to the secondary level.
    </string>
    <string name="section_3">Section 3. Filipino Sign Language as the National Sign Language - Filipino Sign Language, hereinafter referred to as FSL, is hereby declared as the national sign language of the Philippines. The FSL shall be recognized, promoted, and supported as the medium of official communication in all transactions involving the deaf, and as the language of instruction of deaf education, without prejudice to the use of other forms of communication depending on individual choice or preference.</string>
    <string name="introducing_fsl_emergency_signs">Introducing FSL Emergency Signs</string>
    <string name="introducing_fsl_alphabet_signs">Introducing FSL Alphabet Signs</string>
    <string name="introducing_fsl_numbers_signs">Introducing FSL Numbers Signs</string>
    <string name="introducing_fsl_family_signs">Introducing FSL Family Members Signs</string>
    <string name="introducing_fsl_common_signs">Introducing FSL Common Phrases Signs</string>
    <string name="section_4_a">Section 4. Filipino Sign Language in Education. - (a) Medium of Instruction and Curriculum. - The Department of Education (DepEd), the Commission on Higher Education (CHED), the Technical Education and Skills Development Authority (TESDA), and all other national and local government agencies involved in the education of the deaf, are tasked to henceforth use, and coordinate with each other on the use of FSL, as the medium of instruction in deaf education. The FSL shall also be taught as a separate subject in the curriculum for deaf learners. The reading and writing of Filipino, as the national language, other Philippine languages, and English shall also be taught to deaf learners.</string>
    <string name="section_4_b">(b) Deaf Teachers. - To promote the licensing and mobilization of deaf teachers in formal education as well as alternative learning systems, the Professional Regulation Commission (PRC) together with teacher education programs nationwide are directed to employ alternative assessment procedures as affirmative action measures which shall consider the conditions, abilities, and social barriers of the deaf teachers. These procedures shall be language-appropriate and culture-fair to deaf education graduates.</string>
    <string name="section_4_c">(c) FLS in Teacher Education Programs. - In the context of inclusive education and Universal Design, the learning of FSL shall be a curricular or co-curricular offering in teacher education programs as deemed appropriate.</string>
    <string name="section_4_last">The University of the Philippines (UP), together with the Komisyon sa Wikang Filipino (WKP), professional sign linguistics and linguistics researchers, in collaboration with the CHED and the DepEd, and the Early Childhood Care and Development (ECCD) Council, shall develop guidelines for the development of training materials in the education of the deaf for use by all state universities and colleges (SUCs), as well as their teachers and staff.</string>
    <string name="section_5">Section 5. Standards for Filipino Sign Language Interpreting. - The KWF, with the involvement of the deaf community and other stakeholders, shall establish a national system of standards, accreditations, and procedures for FSL interpreting, without prejudice to other forms of communication which respect the right of a deaf person to accessibility, and to seek, receive, impart ideas on an equal basis with others according to their choice. This shall include policies on the practice of interpreting as a profession such as compensation rates and benefits, working conditions, procedures for grievances and others.</string>
    <string name="section_6">Section 6. Filipino Sign Language in the Justice System. - The FSL shall be the official language and legal interpreting for the deaf in all public hearings, proceedings, and transactions of the courts, quasi-judicial agencies, and other tribunals. To ensure effective access to justice for the deaf on an equal basis with others and to facilitate their effective role as direct and indirect participants in the legal system, courts, quasi-judicial agencies, and other tribunals are hereby mandated to ensure the availability of a qualified sign language interpreter in all proceedings involving deaf, without prejudice to the right of the deaf to choose other forms or modes of communication, if they so prefer. </string>
    <string name="section_6_2">For purposes of this Act, “hearings, proceedings, and transactions” shall include those in police stations and before the Lupong Tagapamayapa of the Katarungang Pambarangay, as well as preliminary investigations and other initial stages in the courts, quasi-judicial bodies, and other tribunals.
    \n\nThe Supreme Court and other concerned agencies shall promote appropriate training for those working in the administration of justice, including hearing interpreters, deaf relay interpreters, and other court personnel, police and prison staff. Support staff shall also be trained in translation from FSL to written English or Filipino.
    \n\nThe Department of Justice (DOJ), and the Department of the Interior and Local Government (DILG), and the Judiciary, with the involvement of the deaf community and other stakeholders, are tasked to create a national system of standards, accreditation, and procedures for legal interpreting in FSL.
    </string>
    <string name="fsl_keyboard_overview_title">INTRODUCING FILIPINO SIGN LANGUAGE KEYBOARD</string>
    <string name="fsl_keyboard_overview_desc">Filipino Sign Language Keyboard is an additonal feature of this application. Individuals with hearing impairments may interact more effectively in digital environments because of the FSL keyboard. They can express themselves in their native language by using it, which promotes accessibility and inclusivity in the field of communication.\n\nFSL is an essential component of Filipino Deaf culture thats serves as a communication tool. The introduction of an FSL keyboard contributes to the promotion and preservation of this distinctive linguistic and cultural legacy online.</string>
</resources>