<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_1"
        android:textColor="@color/text_dark"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="22sp"
        android:textAllCaps="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/spartan_bold"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textColor="@color/text_dark"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:fontFamily="@font/spartan"/>

    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/first_img"
        android:contentDescription="@string/app_name"
        android:id="@+id/image" />

</LinearLayout>