<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard_activity.activity.home.fsl_keyboard.FSLKeyboard">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/left_36"
                android:id="@+id/btn_back"
                android:contentDescription="@string/app_name"
                app:tint="@color/_dark_blue_500" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fsl_3"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toTopOf="@id/btn_back"
                app:layout_constraintStart_toEndOf="@id/btn_back"
                app:layout_constraintBottom_toBottomOf="@id/btn_back"
                android:fontFamily="@font/spartan_bold"
                android:textColor="@color/_dark_blue_500"
                android:textSize="16sp"
                android:textAllCaps="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btn_back"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="150dp"
                    android:src="@drawable/keyboard_ss_png"
                    android:contentDescription="@string/app_name"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fsl_keyboard_overview_title"
                    android:fontFamily="@font/spartan_bold"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/text_dark"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fsl_keyboard_overview_desc"
                    android:fontFamily="@font/spartan"
                    android:justificationMode="inter_word"
                    android:textSize="14sp"
                    android:textColor="@color/text_dark"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>