<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".welcome_activity.WelcomeActivity">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_top"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".35"
        />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:src="@drawable/logo_transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_top"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="70dp"
        android:id="@+id/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/spartan"
        android:text="@string/title_desc"
        android:textColor="@color/text_dark"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_top"
        app:layout_constraintEnd_toEndOf="@id/logo"
        app:layout_constraintStart_toStartOf="@id/logo" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/wave_bg"
            android:id="@+id/wave"/>

        <RelativeLayout
            android:layout_marginTop="-5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/wave"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/layout_bg"
            android:padding="30dp">

            <TextView
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_msg"
                android:textColor="@color/white"
                android:fontFamily="@font/spartan"
                android:textSize="18sp"
                android:justificationMode="inter_word"/>

            <com.google.android.material.button.MaterialButton
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/con"
                android:fontFamily="@font/spartan_bold"
                android:textAllCaps="true"
                android:paddingTop="15dp"
                android:id="@+id/btn_continue"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:backgroundTint="@android:color/transparent"
                app:strokeColor="@color/white"
                android:textColor="@color/white"
                android:paddingBottom="15dp"/>

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>