<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard_activity.fragment.TranslatorFragment">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25"
        android:id="@+id/gl_top"/>

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gl_top"
        android:background="@drawable/layout_bg"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_transparent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_name"
            android:id="@+id/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:padding="35dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translator"
                android:fontFamily="@font/spartan_black"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textAllCaps="true"
                android:letterSpacing=".05"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="30dp"
        >

        <TextView
            android:id="@+id/title"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prepared_to_use"
            android:fontFamily="@font/spartan_bold"
            android:textColor="@color/_dark_blue_500"
            android:textSize="20sp"
            android:letterSpacing=".01"/>

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <LinearLayout
                android:id="@+id/btn_text_keyboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/translate_button_bg"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/img_active_kb"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:src="@drawable/text_keyboard_icon"
                    android:contentDescription="@string/app_name"
                    />

                <TextView
                    android:id="@+id/tv_active_kb"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_keyboard"
                    android:fontFamily="@font/spartan"
                    android:textColor="@color/_dark_blue_500"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="16sp"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/reverse_img"
                android:layout_margin="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/reverse_20"
                android:contentDescription="@string/app_name"
                />

            <LinearLayout
                android:id="@+id/btn_sign_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="10dp"
                android:background="@drawable/translate_button_bg"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/img_inactive_kb"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:src="@drawable/sign_language_icon"
                    android:contentDescription="@string/app_name"
                    />

                <TextView
                    android:id="@+id/tv_inactive_kb"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_language"
                    android:fontFamily="@font/spartan"
                    android:textColor="@color/_dark_blue_500"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttons_layout"
            android:layout_centerHorizontal="true"
            android:background="@drawable/translate_button_bg"
            android:layout_marginTop="30dp"
            android:lines="12"
            android:gravity="start|top"
            android:padding="15dp"
            android:inputType="textMultiLine"
            android:id="@+id/et_translate"
            android:autofillHints="false"
            android:hint="@string/type_your_text_here"
            android:fontFamily="@font/spartan"
            tools:ignore="LabelFor,TextFields" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignEnd="@id/et_translate"
            android:layout_alignBottom="@id/et_translate"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/microphone_20"
                android:contentDescription="@string/app_name"
                app:tint="@color/_gray"
                android:id="@+id/btn_mic"/>

            <ImageView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/volume_20"
                android:contentDescription="@string/app_name"
                app:tint="@color/_gray"
                android:id="@+id/btn_sound"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/btn_generate"
            android:text="@string/generate"
            android:fontFamily="@font/spartan_bold"
            android:textAllCaps="true"
            app:cornerRadius="10dp"
            android:backgroundTint="@color/_dark_blue_500"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>